+ Licence window correct exec by timer event
+ Change name to SIGNAL in Document
+ Bugs fix: incorrect bitmap representation,
+ Add license info to the window "About"
+ License agreement in CLI mode
+ "About" window renovation
+ License window renovation
+ --log-file in CLI mode
+ Setting "Show license agreement"
+ Change name from SIGNAL to Signal
+ Print Signal logo on SpecWindow


# 0.19 planning

• Tab order on JsoViews
• Setting don't print keep alive
• Undo / Redo by keyboard
• API mode
    • API activate / stop
    • API settings
    • Swagger documentation
    • README.md
    • POSTMAN collection
    • Run API using CLI --api-mode
    • Setting wait for response / parallel
    • Move "Hotkeys" hint to settings
• Setting not print log in CLI mode; --print-log=True
• Settings tabs - GUI, CLI, API, About

#

• To do
    • Checkable buttons
    • Buttons auto-repeat
    • Set the building up properly
    • Generate grip html-documentation in process of building
    • Prepare the release page for slack https://unlimit.slack.com/archives/G018EV1EY85/p1716830943695369
    • Add ctrl + alt + p to the doc
    • Add button "Get data from tab"
    • Pin main tab and make the other movable
    • Drag and drop files to JsonView
    • Respect JSON-mode when set field value from complex fields constructor
    • Reflect in the document - Main settings, the specification+, files format+, custom validations
    • Exceptions policy
    • Correct and publish the Specification
    • Publish on confluence
    • Spec explanation
    • Radio buttons
    • Toolbar

• Bugs
    • Error on console when run AboutWindow - Could not update timestamps for skipped samples
    • Last tab bug - cannot process tab limits correctly
    • No data in socket if delete field in spec

• Licensing preparation
    • Change the framework to pyside
    • Buy music
    • Prepare code
    • Get Unlimit's disclaimer
    + Buy the logo
    + Gif copyright
    + Change the name